# Logger

./: .gitignore  CMakeLists.txt  readme.md
Test/: client.h
src/: logger.cpp  logger.h  logger_manager.h  main.cpp
src/Debug/: debugger.h
src/Server/: server.h
